--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,7 @@
 !*.sv
 !*.bd
 !*.edif
+!*.bit
 #IP files
 #.xci: synthesis and implemented not possible - you need to return back to the previous version to generate output products
 #.xci + .dcp: implementation possible but not re-synthesis
